# proxLab

./: .env.example  .gitignore  Dockerfile.api  README.md  docker-compose.yml  nginx-proxlab.conf  pyproject.toml
api/: auth.py  config.py  main.py  pyproject.toml  requirements.txt  state.py
api/models/: __init__.py  database.py  flavor.py  server.py  storage.py  task.py
api/routers/: databases.py  flavors.py  servers.py  storage.py  tasks.py
api/services/: postgres.py  proxmox.py  truenas.py
cli/: pyproject.toml
cli/proxlab/: client.py  main.py
cli/proxlab/commands/: config.py  db.py  storage.py  vm.py
templates/base/: cloud-init.yaml
templates/dev/: setup.sh
tests/: conftest.py  test_api.py  test_models.py
web/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
web/src/: index.css  main.tsx
web/src/api/: client.ts
web/src/pages/: Dashboard.tsx  Databases.tsx  Launch.tsx  Servers.tsx  Storage.tsx  Tasks.tsx
