[project]
name = "proxlab-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "proxmoxer>=2.3",
    "requests>=2.32",        # proxmoxer https backend
    "httpx>=0.27",           # TrueNAS REST API
    "asyncpg>=0.29",         # Postgres provisioning
    "python-jose[cryptography]>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
