[project]
name = "proxlab-cli"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
proxlab = "proxlab.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proxlab"]
